# lilith

./: .gitignore  Cargo.toml  README.md  TODO.md  convert.py  convert.sh  dataset.json  inference.json  train.py  training.json  training.json.v1
checkpoints/checkpoint/: scheduler-1.mpk
src/: data.rs  inference.rs  lib.rs  main.rs  model.rs  training.rs
